POWR-1481 Reset body position after sidebar toggle and prevent scroll on narrow devices

--- a/web/themes/custom/cloudy/src/css/_overrides.scss
+++ b/web/themes/custom/cloudy/src/css/_overrides.scss
@@ -12,6 +12,8 @@ Description: Bootstrap 4 with Sass
 -------------------------------------------------*/
 body {
   background: $white;
+  position: relative;
+  overflow-x: hidden; /* Prevent scroll on narrow devices */
 }
 
 p {
